--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <!-- Create another <link> tag to import the styles.css file -->
     <!-- That file is where you will put your styles -->
-    <link rel="stylesheet" href="css/styles.css"
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <header>
